Use database and create sidebar from project context

--- a/public/projects/lesstranslation.html
+++ b/public/projects/lesstranslation.html
@@ -1,12 +1,10 @@
-<Resume>
-    LESS estende o CSS com comportamento dinâmico como variáveis, mixins,
-    operações e funções.
-</Resume>
-
-
-
-
-
-<About>
-    Ainda estou terminando de traduzir
-</About>
+<project>
+    <page name="resume" title="Resumo">
+        LESS estende o CSS com comportamento dinâmico como variáveis, mixins,
+        operações e funções.
+    </page>
+    
+    <page name="about" title="Sobre">
+        Ainda estou terminando de traduzir
+    </page>
+</project>
