--- a/public/projects_old/sigmaandroid.html
+++ b/public/projects_old/sigmaandroid.html
@@ -1,14 +1,13 @@
-<project>
-    <page name="resume" title="Resumo">
-        Sigma Android é um dos aplicativos que fazem parte da coleção Mobile Provider.
-        Com este aplicativo é possível gerenciar Solicitações de Serviço e Ordens de serviço facilmente. Também é completamente integrável com o
-        Sigma.
-    </page>
-    
-    <page name="about" title="Sobre">
-        Sigma Android é um dos aplicativos que fazem parte da coleção Mobile provider
-    </page>
-</project>
+<Resume>
+    <a href="http://sigmaandroid.com.br" target="_blank">Sigma Android</a> é um dos aplicativos que fazem parte da
+    coleção
+    <a href="http://mobileprovider.com.br" target="_blank">Mobile provider</a>. Com este aplicativo é possível
+    gerenciar Solicitações de Serviço e Ordens de serviço facilmente. Também é completamente integrável com o
+    <a href="http://centralsigma.com.br" target="_blank">Sigma</a>.
+</Resume>
+
+
+
 
 
 <About>
