--- a/public/projects/fllecha.html
+++ b/public/projects/fllecha.html
@@ -1,17 +1,15 @@
-<Resume>
-    Fllecha costumava ser um aplicativo de envio de SMS's pela web. Onde você tinha sua
-    própria agenda de contatos e enviava mensagens diretamente para um número de celular
-    ou para grupos de sua agenda. Também permitia programar o envio de mensagens por
-    períodos.
-</Resume>
-
-
-
-
-
-<About>
-    Fllecha costumava ser um aplicativo de envio de SMS's pela web. Onde você tinha sua
-    própria agenda de contatos e enviava mensagens diretamente para um número de celular
-    ou para grupos de sua agenda. Também permitia programar o envio de mensagens por
-    períodos.
-</About>
+<project>
+    <page name="resume" title="Resumo">
+        Fllecha costumava ser um aplicativo de envio de SMS's pela web. Onde você tinha sua
+        própria agenda de contatos e enviava mensagens diretamente para um número de celular
+        ou para grupos de sua agenda. Também permitia programar o envio de mensagens por
+        períodos.
+    </page>
+    
+    <page name="about" title="Sobre">
+        Fllecha costumava ser um aplicativo de envio de SMS's pela web. Onde você tinha sua
+        própria agenda de contatos e enviava mensagens diretamente para um número de celular
+        ou para grupos de sua agenda. Também permitia programar o envio de mensagens por
+        períodos.
+    </page>
+</project>
