--- a/public/projects/mobileprovider.html
+++ b/public/projects/mobileprovider.html
@@ -1,16 +1,9 @@
-<Resume>
-    <a href="http://mobileprovider.com.br" target="_blank">Mobile provider</a> é um projeto da empresa
-    <a href="http://centralsigma.com.br" target="_blank">Rede Industrial</a>
-    que reúne uma coleção de aplicativos empresariais que podem ser acessados pela web, tablets ou smartphones.
-</Resume>
-
-
-
-
-
-<About>
-    <h3>Resumo sobre o projeto</h3>
-    <a href="http://mobileprovider.com.br" target="_blank">Mobile provider</a> é um projeto da empresa
-    <a href="http://centralsigma.com.br" target="_blank">Rede Industrial</a>
-    que reúne uma coleção de aplicativos empresariais que podem ser acessados pela web, tablets ou smartphones.
-</About>
+<project>
+    <page name="resume" title="Resumo">
+        Mobile provider é um projeto da empresa Rede Industrial que reúne uma coleção de aplicativos empresariais que podem ser acessados pela web, tablets ou smartphones.
+    </page>
+    
+    <page name="about" title="Sobre">
+        Mobile provider é um projeto da empresa Rede Industrial que reúne uma coleção de aplicativos empresariais que podem ser acessados pela web, tablets ou smartphones.
+    </page>
+</project>
