--- a/public/projects/pedidosereservas.html
+++ b/public/projects/pedidosereservas.html
@@ -1,17 +1,15 @@
-<Resume>
-    Pedidos e Reservas é um aplicativo onde você cria seu formulário dinâmico e o publica,
-    então quando as pessoas preenchem você recebe um SMS no seu celular com os dados mais
-    relevantes e pode ver os dados detalhadamente pela web. Atualmente o desenvolvimento
-    está parado e não está disponível para uso.
-</Resume>
-
-
-
-
-
-<About>
-    Pedidos e Reservas é um aplicativo onde você cria seu formulário dinâmico e o publica,
-    então quando as pessoas preenchem você recebe um SMS no seu celular com os dados mais
-    relevantes e pode ver os dados detalhadamente pela web. Atualmente o desenvolvimento
-    está parado e não está disponível para uso.
-</About>
+<project>
+    <page name="resume" title="Resumo">
+        Pedidos e Reservas é um aplicativo onde você cria seu formulário dinâmico e o publica,
+        então quando as pessoas preenchem você recebe um SMS no seu celular com os dados mais
+        relevantes e pode ver os dados detalhadamente pela web. Atualmente o desenvolvimento
+        está parado e não está disponível para uso.
+    </page>
+    
+    <page name="about" title="Sobre">
+        Pedidos e Reservas é um aplicativo onde você cria seu formulário dinâmico e o publica,
+        então quando as pessoas preenchem você recebe um SMS no seu celular com os dados mais
+        relevantes e pode ver os dados detalhadamente pela web. Atualmente o desenvolvimento
+        está parado e não está disponível para uso.
+    </page>
+</project>
